--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -416,7 +416,7 @@ title = {Large-Scale Newscast Computing on the Internet}
 	howpublished = {\url{http://ddi-dev.com/blog/programming/top-sites-built-django-framework/}}
 }
 
-@misc{lmap,
+@misc{lamp,
 	title        = {LAMP (software bundle)},
 	howpublished = {\url{https://en.wikipedia.org/wiki/LAMP_(software_bundle)}}
 }
@@ -431,7 +431,52 @@ title = {Large-Scale Newscast Computing on the Internet}
 	howpublished = {\url{https://rubyonrails.org/}}
 }
 
+@misc{js_stats,
+	title        = {Usage statistics of JavaScript as client-side programming language on websites},
+	howpublished = {\url{https://w3techs.com/technologies/details/cp-javascript/all/all}}
+}
 
+@misc{chrome_v8,
+	title        = {What is V8?},
+	howpublished = {\url{https://v8.dev/}}
+}
+
+
+@misc{tampermoneky,
+	title        = {JavaScript:TraceMonkey},
+	howpublished = {\url{https://wiki.mozilla.org/JavaScript:TraceMonkey}}
+}
+
+@misc{firefox_benchmark,
+	title        = {Firefox Performance Dashboard},
+	howpublished = {\url{https://arewefastyet.com/linux64/speedometer?numDays=60}}
+}
+
+@misc{SOAP,
+	title        = {SOAP Version 1.2 Part 1: Messaging Framework (Second Edition)},
+	howpublished = {\url{https://www.w3.org/TR/soap12/}}
+}
+
+@misc{grpc,
+	title        = {About gRPC},
+	howpublished = {\url{https://grpc.io/about/}}
+}
+
+@misc{protobuf,
+	title        = {Protocol Buffers},
+	howpublished = {\url{https://developers.google.com/protocol-buffers/}}
+}
+
+@misc{grpc-web-announce,
+	title        = {The state of gRPC in the browser},
+	howpublished = {\url{https://grpc.io/blog/state-of-grpc-web/}}
+}
+
+@misc{protobuff_json_xml,
+	author       = {Michael Galpin},
+	title        = {Using Internet data in Android applications},
+	howpublished = {\url{https://www.ibm.com/developerworks/library/x-dataAndroid/}}
+}
 
 
 
