--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -18,6 +18,7 @@
 \usepackage[gen]{eurosym} %para incluir el símbolo del euro
 \usepackage{cite} %para incluir citas del archivo <nombre>.bib
 \usepackage{enumerate}
+\usepackage[shortlabels]{enumitem} % Enumerate with a) b) c)...
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{tabularx}
