--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -478,6 +478,33 @@ title = {Large-Scale Newscast Computing on the Internet}
 	howpublished = {\url{https://www.ibm.com/developerworks/library/x-dataAndroid/}}
 }
 
+@misc{wasm-compared,
+	author       = {Aaron Turner},
+	title        = {WebAssembly Is Fast: A Real-World Benchmark of WebAssembly vs. ES6},
+	howpublished = {\url{https://medium.com/@torch2424/webassembly-is-fast-a-real-world-benchmark-of-webassembly-vs-es6-d85a23f8e193}}
+}
+
+@misc{wasm-roadmap,
+	title        = {Roadmap},
+	howpublished = {\url{https://webassembly.org/roadmap/}}
+}
+
+@misc{webassembly-announcement,
+	title        = {WebAssembly consensus and end of Browser Preview},
+	howpublished = {\url{https://lists.w3.org/Archives/Public/public-webassembly/2017Feb/0002.html}}
+}
+
+@misc{w3c-wasm,
+	title        = {WebAssembly Working Group},
+	howpublished = {\url{https://www.w3.org/wasm/}}
+}
+
+@misc{wasm-concepts,
+	title        = {WebAssembly Concepts},
+	howpublished = {\url{https://developer.mozilla.org/en-US/docs/WebAssembly/Concepts}}
+}
+
+
 
 
 
