--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -1,8 +1,13 @@
 \chapter{Project Planning}
 
 \section{Methodology}
+Given the limited amount of time and the scope of this project, having working prototypes in short periods of time enables us to test and change our design decisions in case the obtained results do not cope with our expected goals.  
+
+Agile is an iterative and incremental software development methodology which focuses on flexibility, interactivity, and a high level of transparency. Each agile iteration, known as sprint, has a detailed feature list that the developer aims to have implemented and tested by the end of that sprint.
+
+Considering that we are building a platform, having users perspective on mind is essential through all the development process. In Agile, user stories are an excellent way to achieve that by defining features as what a specific type of user wants to do with the system and why. 
+
+Furthermore, user stories allows us to easily develop quality assurance tests that validate use cases and scenarios rather than validating just functions implementations. This is known as \textit{Persona Based testing}, where a a fictional user profile is created to represent a user type with specific characteristics that expects certain high-level functionalities to be provided by the product being developed.
 
 
 \section{Time estimation}
-
-\section{Development follow up}
