--- a/doc/secciones/06_implementacion.tex
+++ b/doc/secciones/06_implementacion.tex
@@ -1,5 +1,13 @@
 \chapter{Implementation}
 
+Development follow up for each milestone 
+
+Describe the objectives of each milestone
+Describe interesting points of the development
+Conclusions
+
+
+
 La implementación del software se ha dividido en hitos. Estos, han sido definidos en Github
 y cada uno de ellos contiene un grupo de \textit{issues} que se corresponden con las distintas
 mejoras que se han ido incorporando al software a lo largo de su desarrollo.\\
