--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -504,9 +504,18 @@ title = {Large-Scale Newscast Computing on the Internet}
 	howpublished = {\url{https://developer.mozilla.org/en-US/docs/WebAssembly/Concepts}}
 }
 
+@misc{github,
+	title        = {GitHub},
+	howpublished = {\url{https://github.com}}
+}
 
+@misc{zenhub,
+	title        = {ZenHub Plugin},
+	howpublished = {\url{https://github.com/marketplace/zenhub}}
+}
 
-
-
-
+@misc{kanban,
+	title        = {Kanban Board},
+	howpublished = {\url{https://en.wikipedia.org/wiki/Kanban_board}}
+}
 
