--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -24,7 +24,10 @@
 \usepackage{tabularx}
 \usepackage{booktabs}
 \usepackage{wrapfig} % Wrap images with text
-\usepackage{subcaption} 
+\usepackage{subcaption}
+\usepackage{multirow, multicol} % For personas
+\usepackage{float}
+\restylefloat{table} % for personas images
 
 \usepackage[table,xcdraw]{xcolor}
 \hypersetup{
