--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -54,14 +54,109 @@ A list of the most important features from GitHub and ZenHub that we will use in
 \end{figure}
 
 
+\newcommand{\tabitem}{~~\llap{\textbullet}~~}
 \section{Personas}
 As previously stated, it is indispensable for a platform to be tested from its users perspective; so that, \textit{Persona Based Testing} will be the quality assurance methodology to be followed. We have created the following personas to create our GitHub issues and tests.
 
-\paragraph*{Antonio}
+\subsection*{Aitor Peña}
+\begin{table}[H]
+\begin{tabular}{c p{0.7\textwidth}}
+\multirow{2}{*}{
+      \includegraphics[width=0.3\linewidth]{assets/images/man1.png}
+} 
+& 
+\multicolumn{1}{p{0.7\textwidth}}{
+\textbf{Details}
+\begin{itemize}
+	\item Holds a bachelors degree in Computer Science.
+	\item Experienced with distributed systems.
+	\item Is 34 years old, works as system administrator.
+\end{itemize}
+} \\
+&
+\textbf{Goals} 
+\begin{itemize}
+	\item Needs to run a demo problem in order to test the platform.
+	\item Needs to get metrics from the execution of problems so that he can assess how the system is performing.
+\end{itemize}   
+\end{tabular}
+\end{table}
 
-\paragraph*{Blanca}
+\subsection*{Bianca Domenech}
+\begin{table}[h]
+\begin{tabular}{c p{0.7\textwidth}}
+\multirow{2}{*}{
+      \includegraphics[width=0.3\linewidth]{assets/images/woman1.png}
+} 
+& 
+\multicolumn{1}{p{0.7\textwidth}}{
+\textbf{Details}
+\begin{itemize}
+	\item Holds a PhD in Biotechnology.
+	\item Experienced with programming although she does not know much about parallel and distributed computing.
+	\item Is 43, works as Researcher at the University of British Columbia.
+\end{itemize}
+} \\
+&portarit
+\textbf{Goals} 
+\begin{itemize}
+	\item Wants to be able to upload my problem to a platform where users can collaborate to it. 
+	\item Wants to have a common representation for her problem information so she does not need to create a different representation for each type of machine collaborating.
+	\item Wants an interface to exchange information between collaborating machines so that she does not need to know how the underlying communication protocol works.
+\end{itemize}   
+\end{tabular}
+\end{table}
 
-\paragraph*{Luis}
+\newpage
+\subsection*{Ana Castillo}
+\begin{table}[h]
+\begin{tabular}{c p{0.7\textwidth}}
+\multirow{2}{*}{
+      \includegraphics[width=0.3\linewidth]{assets/images/woman2.png}
+} 
+& 
+\multicolumn{1}{p{0.7\textwidth}}{
+\textbf{Details}
+\begin{itemize}
+	\item Is 26 years old, is a Computer Science master student.
+	\item Has previous experience with distributed systems.
+	\item Likes to collaborate in open-source projects.
+\end{itemize}
+} \\
+&
+\textbf{Goals} 
+\begin{itemize}
+	\item Wants all the functions of the system tested so she knows that her contributions does not break the system.
+\end{itemize}   
+\end{tabular}
+\end{table}
 
-\paragraph*{Ana}
+
+\subsection*{Aleix Vargas}
+\begin{table}[h]
+\begin{tabular}{c p{0.7\textwidth}}
+\multirow{2}{*}{
+      \includegraphics[width=0.3\linewidth]{assets/images/man2.png}
+} 
+& 
+\multicolumn{1}{p{0.7\textwidth}}{
+\textbf{Details}
+\begin{itemize}
+	\item Is 22 years old, works as English teacher.
+	\item Likes science and would like to contribute somehow.
+	\item Is not tech-savvy.
+\end{itemize}
+} \\
+&
+\textbf{Goals} 
+\begin{itemize}
+	\item Wants to start contributing to a scientific problem from his browser so that he does not need to install anything on his computer.
+	\item Wants to be able to select which project he wants to contribute to so that he can collaborate in something he is interested in.
+\end{itemize}   
+\end{tabular}
+\end{table}
+
+
+
+
   
