--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -519,3 +519,50 @@ title = {Large-Scale Newscast Computing on the Internet}
 	howpublished = {\url{https://en.wikipedia.org/wiki/Kanban_board}}
 }
 
+@Article{gprop,
+author="Castillo, P. A.
+and Carpio, J.
+and Merelo, J. J.
+and Prieto, A.
+and Rivas, V.
+and Romero, G.",
+title="Evolving Multilayer Perceptrons",
+journal="Neural Processing Letters",
+year="2000",
+issn="1573-773X",
+doi="10.1023/A:1009684907680",
+url="https://doi.org/10.1023/A:1009684907680",
+}
+
+@article{proben1,
+author = {Prechelt, Lutz},
+year = {1994},
+month = {01},
+pages = {},
+title = {PROBEN1 — A set of benchmarks and benchmarking rules for neural network training algorithms}
+}
+
+@misc{go,
+	title        = {The Go Programming Language},
+	howpublished = {\url{https://golang.org/}}
+}
+
+@misc{goroutines,
+	title        = {Go by Example: Goroutines},
+	howpublished = {\url{https://gobyexample.com/goroutines}}
+}
+
+@misc{channels,
+	title        = {Go by Example: Channels},
+	howpublished = {\url{https://gobyexample.com/channels}}
+}
+
+@misc{go-perceptron-go,
+	title        = {Go perceptron},
+	howpublished = {\url{https://github.com/made2591/go-perceptron-go}}
+}
+
+@misc{eaopt,
+	title        = {eaopt},
+	howpublished = {\url{https://github.com/MaxHalford/eaopt}}
+}
